tools/crates/vendor/toml_edit/tests/fixtures/invalid/control/rawstring-lf.stderr
TOML parse error at line 1, column 23
  |
1 | rawstring-lf   = 'null'
  |                       ^
invalid literal string
